# FedEloquence

./: .gitattributes  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README_setup.md  README_template.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
analysis/: plot_diagrams.py  plot_diagrams.sh
configs/comparable/occiglot-7B-eu5-instruct/: baseline.yaml  ds_10c_1000r_30ls.yaml  ds_15c_1000r_30ls.yaml  ds_1c_1000r_30ls.yaml  ds_20c_1000r_30ls.yaml  ds_30c_1000r_30ls.yaml  ds_3c_1000r_30ls.yaml  ds_6c_1000r_30ls.yaml
configs/standalone/occiglot-7B-eu5-instruct/: baseline.yaml  ds_10c_200r_30ls.yaml  ds_15c_200r_30ls.yaml  ds_1c_200r_30ls.yaml  ds_20c_200r_30ls.yaml  ds_30c_200r_30ls.yaml  ds_3c_200r_30ls.yaml  ds_6c_200r_30ls.yaml
create_FL_multilingual_datasets/: create_dataset_alpaca_cleaned_8c.py
create_FL_multilingual_datasets/alpaca_cleaned/jsonls/: README.md
data/: xlsum_4c.jsonl
fedeloquence/: __main__.py  base.py  cli.py
federatedscope/: main.py
federatedscope/core/: cmd_args.py
federatedscope/core/aggregators/: __init__.py  clients_avg_aggregator.py  clients_valloss_aggregator.py
federatedscope/core/auxiliaries/: aggregator_builder.py  worker_builder.py
federatedscope/core/configs/: cfg_data.py  cfg_evaluation.py  cfg_fl_setting.py  cfg_llm.py  constants.py
federatedscope/core/data/: base_translator.py
federatedscope/core/monitors/: monitor.py
federatedscope/prompt_templates/: alpaca.py  alpaca_cleaned_8c.py
prompt_templates/: alpaca.py  xlsum_4c.py
tests/: test_base.py
(+34 files in other folders)
