[project]
name = "federatedscope"
version = "0.3.0"
description = "Eloquence Federated LLM based on FederatedScope repository"
readme = "README.md"
authors = [
    { name = "Jordi Luque", email = "jordi.luque@telefonica.com"}, 
    { name = "Aleix Sant", email = "aleix.santsavall@telefonica.com" }
]
requires-python = "==3.9.*"
dependencies = [
    'numpy==1.22.4',
    'scikit-learn==1.0.2',
    'scipy==1.7.3',
    'pandas',
    'grpcio>=1.45.0',
    'grpcio-tools',
    'pyyaml>=5.1',
    'fvcore',
    'iopath',
    'wandb',
    'tensorboard',
    'tensorboardX',
    'pympler',
    'protobuf==3.19.4',
    'matplotlib',
    'dill',
    'torch==2.4.1',
    'torchaudio==2.4.1', 
    'torchvision==0.19.1',
    'deepspeed==0.16.5',
    'cupy-cuda12x',
    'tokenizers==0.21.0',
    'transformers==4.48.2',
    'accelerate==0.20.3',
    'peft==0.3.0',
    'sentencepiece==0.1.99',
    'rouge-score==0.1.2',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
